--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	
 	
 	<body>
+		<p><a href="https://sangwon100.github.io/project1-1/">Resume</a></p>
+		<p><a href="https://sangwon100.github.io/project1-2/">Diary</a></p>
+		<p><a href="https://sangwon100.github.io/project1-3/">Book report</a></p>
 		<h1>Project 1-1</h1>
 		<h2>Outline</h2>
 		<p>This page contains the story of my high school days.</p>
